solve image bug

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section class="row">
       <div class="img-2-div">
         <p class="img-2">
-          <img class="imgslide2" src="/image/img_1_long.jpg.webp" />
+          <img class="imgslide2" src="image/img_1_long.jpg.webp" />
         </p>
       </div>
       <div class="Welcome-to-website-div">
